--- a/shirkers-challenge/shirkers-challenge/Resources/Info.plist
+++ b/shirkers-challenge/shirkers-challenge/Resources/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs to use the microphone to record audio</string>
+	<string>Memora needs to use the microphone to record audio</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
